RESOLVED FIXED122308
Assert that we don't try to index past the end of the m_coreTextIndices array
https://bugs.webkit.org/show_bug.cgi?id=122308
Summary Assert that we don't try to index past the end of the m_coreTextIndices array
Anders Carlsson
Reported 2013-10-03 17:40:15 PDT
Assert that we don't try to index past the end of the m_coreTextIndices array
Attachments
Patch (1.42 KB, patch)
2013-10-03 17:42 PDT, Anders Carlsson
no flags
Anders Carlsson
Comment 1 2013-10-03 17:42:18 PDT
WebKit Commit Bot
Comment 2 2013-10-03 21:40:39 PDT
Comment on attachment 213318 [details] Patch Clearing flags on attachment: 213318 Committed r156879: <http://trac.webkit.org/changeset/156879>
WebKit Commit Bot
Comment 3 2013-10-03 21:40:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.