Assert that we don't try to index past the end of the m_coreTextIndices array https://bugs.webkit.org/show_bug.cgi?id=122308

Reviewed by Dan Bernstein.

Because an assertion failure is better than a random crash.

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::ComplexTextRun::indexAt):


Canonical link: https://commits.webkit.org/140356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156879 268f45cc-cd09-0410-ab3c-d52691b4dbfc